upgraded avgDP input, pushing before I mess things up changing  MP input

--- a/HTP_compdrift.ipynb
+++ b/HTP_compdrift.ipynb
@@ -39,22 +39,23 @@
     "#model = \"mayolewis\"\n",
     "\n",
     "# reactivity ratios of monomers, ex. for 4 monomers:\n",
-    "#[r12, r21, r31, r41]\n",
-    "#[r13, r23, r32, r42]\n",
-    "#[r14, r24, r34, r43]\n",
+    "#[r12, r13, r14]\n",
+    "#[r21, r23, r24]\n",
+    "#[r31, r32, r34]\n",
+    "#[r41, r42, r43]\n",
     "RRs = ([[1, 1, 1],\n",
     "        [1, 1, 1],\n",
     "        [1, 1, 1],\n",
     "        [1, 1, 1]])\n",
     "\n",
-    "# % conversion targetted (0-100 NOT 0-1), i.e. how much of the monomer pool do you want to use\n",
-    "conv = 50\n",
+    "# % conversion targetted (0-1), i.e. how much of the monomer pool do you want to use\n",
+    "conv = 0.5\n",
     "\n",
-    "# average degree of polymerization (chain length) - TODO: change this to real, not assuming 100% conv.\n",
+    "# average degree of polymerization (chain length) you are targetting at YOUR conversion, NOT at 100%.\n",
     "avgDP = 100\n",
     "\n",
     "# monomer pool size (how many total monomeric units in the system to simulate) - TODO: CHANGE THIS TO # OF CHAINS.\n",
-    "MP = 1e6 \n",
+    "MP = 1e6\n",
     "\n",
     "# Chain transfer % - TODO: replace this with direct PDI control (if possible)\n",
     "CTP = 100\n"
