--- a/HTP_compdrift.ipynb
+++ b/HTP_compdrift.ipynb
@@ -487,7 +487,83 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "### SLIDING WINDOW ANALYSIS OF POLYMERS\n",
+    "# Set window length:\n",
+    "WIN_LENGTH = 1\n",
+    "\n",
+    "# create a new list bins, to replace amino acids by corresponding hydrophobicity over the whole sequence \n",
+    "def translate(chars, HLBs):\n",
+    "    bins = []\n",
+    "    for i in range(len(chars)):\n",
+    "        bins.append(HLBs[int(chars[i])-1])\n",
+    "    return bins\n",
+    "\n",
+    "# iterate an iterable sequence by the number of size per time and create a list of sliding_Arrays for that\n",
+    "def window( iterable, size ):\n",
+    "    sliding_array=[]\n",
+    "    iters = tee(iterable, int(size))\n",
+    "    for i in range(1, int(size)):\n",
+    "        for each in iters[i:]:\n",
+    "            next(each, None)\n",
+    "    for each in zip(*iters):\n",
+    "        sliding_array.append(list(each))\n",
+    "    return sliding_array\n",
+    "\n",
+    "# create a dictionary to keep the medium coordinate and average value for each sliding window\n",
+    "def seg_analysis(sliding_arrays,win_length):\n",
+    "    pos_val={}  \n",
+    "    int_pos = int(win_length) // 2 +1\n",
+    "    for each in sliding_arrays:\n",
+    "        ave_value=np.mean(each)\n",
+    "        pos_val[int_pos]=ave_value\n",
+    "        int_pos+=1\n",
+    "    return pos_val\n",
+    "\n",
+    "#input a dictionary including positions and average value of a sliding arrays, output a plot\n",
+    "def win_plot(pos_val, pro_name, win_length, inverse=False):\n",
+    "    # sorted by key, return a list of tuples\n",
+    "    lists = list(sorted(pos_val.items())) \n",
+    "    # unpack a list of pairs into two tuples\n",
+    "    x, y=zip(*lists)\n",
+    "    # Create a Figure\n",
+    "    fig =plt.figure(figsize=(8,8))\n",
+    "    # Set up Axes\n",
+    "    ax= fig.add_subplot(111)\n",
+    "    if inverse:\n",
+    "        plt.ylim((5,13))\n",
+    "        plt.gca().invert_yaxis()\n",
+    "    ax.scatter(x, y)\n",
+    "    ax.plot(x, y)\n",
+    "    #ax.set_xlim(0, 60)\n",
+    "    ax.set(title= \"Hydropathy plot of \" + str(pro_name) + \" ,window length = \" + str(win_length), xlabel=\"Center AA in AAs window\", ylabel=\"Average Hydrophobicity/Window\")\n",
+    "    plt.savefig(\"outputs/\" + str(pro_name) + \"_\" + str(win_length) + \".png\",transparent =True)\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "# ACTUAL SCRIPT.\n",
+    "for m in tqdm_notebook(range(len(csv_files))):\n",
+    "    \n",
+    "    filename = csv_files[m].replace(path, '').replace('/', '').replace('.csv', '')\n",
+    "\n",
+    "    mat = list()\n",
+    "    for seq in tqdm_notebook(seqs[m]):\n",
+    "        bins = translate(seq, HLBs)\n",
+    "        sliding_arrays = window(bins, WIN_LENGTH)\n",
+    "        pos_val = seg_analysis(sliding_arrays, WIN_LENGTH)\n",
+    "        lists = list(sorted(pos_val.items()))\n",
+    "        x,y = zip(*lists)\n",
+    "\n",
+    "        mat.append(y)\n",
+    "            \n",
+    "    df = pd.DataFrame(mat)\n",
+    "    #r\"outputs/HLB_%s.xlsx\"%filename\n",
+    "    df.to_csv(r'outputs/%s_%s_%d.csv'% (filename,\"HLB\",int(WIN_LENGTH)),index=False)\n",
+    "\n",
+    "    # Uncomment line below to actually plot hydropathy for each sequence.\n",
+    "    # Note, if your excel sheet has 10k sequences, you will output 10k plots - this may crash your browser.\n",
+    "    #win_plot(pos_val, filename, WIN_LENGTH)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -508,7 +584,318 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "### Histograms of composition on each individual monomer chain:\n",
+    "\n",
+    "\n",
+    "N_MONS = 4 # number of unique monomers\n",
+    "RUN_ONLY_SUBSET = True # set False if you want to run all sequences\n",
+    "\n",
+    "FWHMs = []\n",
+    "FWHM_norms = []\n",
+    "\n",
+    "for m in range(len(csv_files)):\n",
+    "    seq = []\n",
+    "    \n",
+    "    if RUN_ONLY_SUBSET:\n",
+    "        if m not in subset_inds:\n",
+    "            continue\n",
+    "    \n",
+    "    with open(csv_files[m], mode = 'r') as file:\n",
+    "        csvFile = csv.reader(file)\n",
+    "        i = 0\n",
+    "        for lines in csvFile:\n",
+    "            i = i + 1\n",
+    "            seq.append(lines)\n",
+    "            #print(lines)\n",
+    "\n",
+    "    seqlen = np.zeros(i)\n",
+    "    seq_comp = np.zeros([i,4])\n",
+    "\n",
+    "    for j in range(0,i):\n",
+    "        seqlen[j] = len(seq[j])\n",
+    "        for k in range(4):\n",
+    "            seq_comp[j][k] = seq[j].count(str(k+1))/seqlen[j]\n",
+    "            \n",
+    "    print(csv_files[m].replace(path, '').replace('/', '').replace('.csv', ''))\n",
+    "    FWHM = np.zeros(N_MONS)\n",
+    "    FWHM_norm = np.zeros(N_MONS)\n",
+    "    for i in range(N_MONS):\n",
+    "        #MMA_x, MMA_y = sns.distplot(seq_comp[:,0], label=\"MMA\").get_lines()[0].get_data()\n",
+    "        FWHM[i] = 2.355*np.std(seq_comp[:,i])\n",
+    "        FWHM_norm[i] = 2.355*np.std(seq_comp[:,i])/np.mean(seq_comp[:,i])\n",
+    "    print(FWHM)\n",
+    "    print(FWHM_norm)\n",
+    "    FWHMs.append(FWHM)\n",
+    "    FWHM_norms.append(FWHM_norm)\n",
+    "\n",
+    "    plt.figure(num=None, figsize=(12, 8), dpi=80, facecolor='w', edgecolor='k')\n",
+    "    sns.set_style(style='white') #style='white' or 'darkgrid'\n",
+    "    plt.xlabel(\"Feeding monomer fraction\")\n",
+    "    plt.ylabel(\"Frequency\")\n",
+    "    sns.distplot(seq_comp[:,0], label=\"MMA\")\n",
+    "    sns.distplot(seq_comp[:,1], label=\"OEGMA500\")\n",
+    "    sns.distplot(seq_comp[:,2], label=\"EHMA\")\n",
+    "    sns.distplot(seq_comp[:,3], label=\"SPMA\")\n",
+    "    plt.legend()\n",
+    "    plt.show()\n",
+    "\n",
+    "    plt.cla()   # Clear axis\n",
+    "    plt.clf()   # Clear figure\n",
+    "\n",
+    "    \"\"\" # (same plot but using plt instead of sns)\n",
+    "    plt.figure(num=None, figsize=(12, 8), dpi=80, facecolor='w', edgecolor='k')\n",
+    "    plt.xlabel(\"chain composition fraction\", fontsize=15)\n",
+    "    #plt.ylabel(\"asdf\")\n",
+    "    plt.hist(seq_comp[:,0], label=\"MMA\")\n",
+    "    plt.hist(seq_comp[:,1], label=\"OEGMA500\")\n",
+    "    plt.hist(seq_comp[:,2], label=\"EHMA\")\n",
+    "    plt.hist(seq_comp[:,3], label=\"SPMA\")\n",
+    "    plt.legend(fontsize=15)\n",
+    "    plt.show()\n",
+    "    \"\"\"\n",
+    "\n",
+    "FWHMs = np.array(FWHMs)\n",
+    "FWHM_norms = np.array(FWHM_norms);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Box Whisker Plot\n",
+    "pos_data = list()\n",
+    "for i in range(cols_size):\n",
+    "    if df1[str(i)].isnull().values.any():\n",
+    "        datacol = [y_ for y_ in df1[str(i)] if str(y_) != 'nan']\n",
+    "        pos_data.append(datacol)\n",
+    "    else:\n",
+    "        pos_data.append(df1[str(i)])\n",
+    "\n",
+    "fig = plt.figure(figsize =(15, 7))\n",
+    "ax = fig.add_axes([0, 0, 1, 1])\n",
+    "ax.boxplot(pos_data, whis=(0,100))\n",
+    "plt.xlabel(\"Sequence position\")\n",
+    "plt.ylabel(\"Window average HLB\")\n",
+    "plt.xticks([])\n",
+    "#plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# binarize data and save it to output csv.\n",
+    "\n",
+    "binarized = []\n",
+    "for i in tqdm_notebook(range(rows_size)):\n",
+    "    binarized_seq = []\n",
+    "    for j in range(cols_size):\n",
+    "        if df1[str(j)][i] > 9:\n",
+    "            binarized_seq.append(1)\n",
+    "        elif df1[str(j)][i] <= 9:\n",
+    "            binarized_seq.append(0)\n",
+    "        else:\n",
+    "            binarized_seq.append(2) # this implies the value was an NaN\n",
+    "    binarized.append(binarized_seq)\n",
+    "\n",
+    "binarized_df = pd.DataFrame(binarized)\n",
+    "binarized_df.to_csv(PATH + '_binarized.csv', index=False)\n",
+    "binarized_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hydrophilic count\n",
+    "hydrophob_li = list()\n",
+    "hydrophil_li = list()\n",
+    "for i in tqdm_notebook(range(rows_size)):\n",
+    "    hydrophobl = np.zeros(cols_size)\n",
+    "    hydrophilbl = np.zeros(cols_size)\n",
+    "    counterpho = 0\n",
+    "    counterphil = 0\n",
+    "    for j in range(cols_size):\n",
+    "        if binarized_df[j][i] == 0:\n",
+    "            counterpho += 1\n",
+    "            if counterphil > 0:\n",
+    "                hydrophilbl[counterphil-1] += 1\n",
+    "            counterphil = 0\n",
+    "            continue\n",
+    "        elif binarized_df[j][i] == 1:\n",
+    "            counterphil += 1\n",
+    "            if counterpho > 0:\n",
+    "                hydrophobl[counterpho-1] += 1\n",
+    "            counterpho = 0\n",
+    "            continue\n",
+    "        else:\n",
+    "            if counterpho > 0:\n",
+    "                hydrophobl[counterpho-1] += 1\n",
+    "            if counterphil > 0:\n",
+    "                hydrophilbl[counterphil-1] += 1\n",
+    "            break\n",
+    "    hydrophob_li.append(hydrophobl)\n",
+    "    hydrophil_li.append(hydrophilbl)\n",
+    "\n",
+    "hydrophobic_df = pd.DataFrame(hydrophob_li)\n",
+    "hydrophilic_df = pd.DataFrame(hydrophil_li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hydrophobic_i = len(hydrophobic_df.columns)\n",
+    "hydrophilic_i = len(hydrophilic_df.columns)\n",
+    "graph1_phob = []\n",
+    "graph1_phil = []\n",
+    "\n",
+    "# sum the hydrophobic counts\n",
+    "for i in range(hydrophobic_i):\n",
+    "    a = np.sum(hydrophobic_df[i])\n",
+    "    graph1_phob.append(a)\n",
+    "\n",
+    "# sum the hydrophilic counts\n",
+    "for i in range(hydrophilic_i):\n",
+    "    b = np.sum(hydrophilic_df[i])\n",
+    "    graph1_phil.append(b)\n",
+    "    \n",
+    "# go backwards from both until you find the first non-zero entry and truncate there\n",
+    "for i in range(1,len(graph1_phob)):\n",
+    "    if (graph1_phob[-i] != 0.0):\n",
+    "        graph1_phob = graph1_phob[:-i]\n",
+    "        break\n",
+    "\n",
+    "for i in range(1,len(graph1_phil)):\n",
+    "    if (graph1_phil[-i] != 0.0):\n",
+    "        graph1_phil = graph1_phil[:-i]\n",
+    "        break\n",
+    "\n",
+    "# create x-axis for both\n",
+    "x_phob_1 = np.zeros(len(graph1_phob))\n",
+    "x_phil_1 = np.zeros(len(graph1_phil))\n",
+    "\n",
+    "for i in range(len(graph1_phob)):\n",
+    "    x_phob_1[i] = i+1\n",
+    "\n",
+    "for i in range(len(graph1_phil)):\n",
+    "    x_phil_1[i] = i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PLOT hydrophobic segments\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_axes([0,0,1,1])\n",
+    "ax.bar(x_phob_1,graph1_phob, width = 1)\n",
+    "plt.xlabel(\"segment length\")\n",
+    "plt.ylabel(\"number of segments\")\n",
+    "plt.title(\"Hydrophobic Segments\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### PLOT hydrophilic segments\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_axes([0,0,1,1])\n",
+    "ax.bar(x_phil_1,graph1_phil, width = 1)\n",
+    "plt.xlabel(\"segment length\")\n",
+    "plt.ylabel(\"number of segments\")\n",
+    "plt.title(\"Hydrophilic Segments\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### FULL HYDROPHOBIC DATASET (non-zero)\n",
+    "phobic_length_data = []\n",
+    "for i in range(len(graph1_phob)):\n",
+    "    phobic_length_data.append([ y_ for y_ in list(hydrophobic_df[i]) if y_ != 0.0])\n",
+    "        \n",
+    "fig = plt.figure(figsize =(12, 7))\n",
+    "#ax = fig.add_axes([0, 1, 2, 1])\n",
+    "ax = fig.add_axes([0, 0, 1, 1])\n",
+    "ax.boxplot(phobic_length_data, whis=(0,100))\n",
+    "plt.xlabel(\"Hydrophobic Segment Length\")\n",
+    "plt.ylabel(\"Non-zero counts\")\n",
+    "#plt.xticks([])\n",
+    "#plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
+    "plt.show()\n",
+    "\n",
+    "#  just hydrophobic segment lengths up to 10\n",
+    "phobic_length_data2 = []\n",
+    "for i in range(12):\n",
+    "    phobic_length_data2.append([ y_ for y_ in list(hydrophobic_df[i]) if y_ != 0.0])\n",
+    "\n",
+    "fig = plt.figure(figsize =(12, 7))\n",
+    "#ax2 = fig.add_axes([0, 0, 2, 1])\n",
+    "ax = fig.add_axes([0, 0, 1, 1])\n",
+    "ax.boxplot(phobic_length_data2, whis=(0,100))\n",
+    "plt.xlabel(\"Hydrophobic Segment Length\")\n",
+    "plt.ylabel(\"Non-zero counts\")\n",
+    "#plt.xticks([])\n",
+    "#plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### FULL HYDROphilic DATASET (non-zero)\n",
+    "philic_length_data = []\n",
+    "for i in range(len(graph1_phil)):\n",
+    "    philic_length_data.append([ y_ for y_ in list(hydrophilic_df[i]) if y_ != 0.0])\n",
+    "        \n",
+    "fig = plt.figure(figsize =(12, 7))\n",
+    "#ax = fig.add_axes([0, 1, 2, 1])\n",
+    "ax = fig.add_axes([0, 0, 1, 1])\n",
+    "ax.boxplot(philic_length_data, whis=(0,100))\n",
+    "plt.xlabel(\"Hydrophilic Segment Length\")\n",
+    "plt.ylabel(\"Non-zero counts\")\n",
+    "#plt.xticks([])\n",
+    "#plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
+    "\n",
+    "#  just hydrophilic segment lengths up to 10\n",
+    "philic_length_data2 = []\n",
+    "for i in range(12):\n",
+    "    philic_length_data2.append([ y_ for y_ in list(hydrophilic_df[i]) if y_ != 0.0])\n",
+    "\n",
+    "fig = plt.figure(figsize =(12, 7))\n",
+    "#ax2 = fig.add_axes([0, 0, 2, 1])\n",
+    "ax = fig.add_axes([0, 0, 1, 1])\n",
+    "ax.boxplot(philic_length_data2, whis=(0,100))\n",
+    "plt.xlabel(\"Hydrophilic Segment Length\")\n",
+    "plt.ylabel(\"Non-zero counts\")\n",
+    "#plt.xticks([])\n",
+    "#plt.xticks(np.arange(0,cols_size, step=20)) #TODO: fix x axis marks\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -523,12 +910,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'FWHM_norms' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4f2655b213ec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0msub_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'FWHM_'\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFWHM_norms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0msub_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'FWHM_norms' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    sub_df['FWHM_' + str(i)] = FWHM_norms[:,i]\n",
+    "sub_df\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(10,10))\n",
+    "sns.set_style(style='white') #style='white' or 'darkgrid'\n",
+    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_0\", data=sub_df, label='MMA')\n",
+    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_1\", data=sub_df, label='EHMA')\n",
+    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_2\", data=sub_df, label='OEMGA') \n",
+    "ax = sns.regplot(x=\"NumSeqs\", y=\"FWHM_3\", data=sub_df, label='SPMA')\n",
+    "ax.set_ylabel('FWHM')\n",
+    "ax.set(ylim=(0, 1))\n",
+    "plt.legend(loc='center left')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1120,7 +1532,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
