specific pattern segment search added, seq2seq inputs made clear

--- a/HTP_compdrift.ipynb
+++ b/HTP_compdrift.ipynb
@@ -321,35 +321,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#specific segment pattern search mon2mon level (still working on it)\n",
+    "#specific segment pattern search\n",
     "b_no = 8\n",
-    "s_no = 893\n",
+    "s_no = 837\n",
     "\n",
     "oegma_counter = 0\n",
     "seg_len = 0\n",
-    "seg_array = list()\n",
+    "seg_array = []\n",
     "\n",
     "for i in range(len(dfs[b_no].iloc[s_no])):\n",
-    "    if dfs[b_no][i][s_no] == None and oegma == 0:\n",
-    "        continue\n",
-    "    elif int(dfs[b_no][i][s_no]) == 1 or int(dfs[b_no][i][s_no]) == 3:\n",
-    "        seg_len += 1\n",
-    "    elif int(dfs[b_no][i][s_no]) == 2 and oegma == 0:\n",
-    "        oegma += 1\n",
-    "        seg_len += 1\n",
-    "    elif int(dfs[b_no][i][s_no]) == 2 and oegma == 1:\n",
-    "        seg_array.append(seg_len)\n",
-    "        seg_len = 0\n",
-    "        oegma = 0\n",
-    "    elif int(dfs[b_no][i][s_no]) == 4 and oegma == 0:\n",
-    "        seg_len = 0\n",
-    "    elif int(dfs[b_no][i][s_no]) == 4 and oegma == 1:\n",
-    "        seg_array.append(seg_len)\n",
-    "        seg_len = 0\n",
-    "        oegma = 0\n",
+    "    if dfs[b_no][i][s_no] == str(2):\n",
+    "        back_counter = 0\n",
+    "        forward_counter = 0\n",
+    "        j = 1\n",
+    "        k = 1\n",
+    "        while i-j >= 0 and (dfs[b_no][i-j][s_no] == str(1) or dfs[b_no][i-j][s_no] == str(3)):\n",
+    "            j += 1\n",
+    "            back_counter += 1\n",
+    "        while i+k <= len(dfs[b_no].iloc[s_no])-1 and (dfs[b_no][i+k][s_no] == str(1) or dfs[b_no][i+k][s_no] == str(3)):\n",
+    "            k += 1\n",
+    "            forward_counter += 1\n",
+    "        if forward_counter > 1 and back_counter > 1:\n",
+    "            seg_array.append(back_counter + forward_counter + 1)\n",
     "\n",
-    "print('Number of Hydrophobic segments with 1 OEGMA: ' + str(len(seg_array)))\n",
-    "print('Length of Hydrophobic segments with 1 OEGMA: ' + str(seg_array))"
+    "if len(seg_array) == 0:\n",
+    "    print('0 patterns found.')\n",
+    "else:\n",
+    "    print('Number of Hydrophobic segments with 1 OEGMA: ' + str(len(seg_array)))\n",
+    "    print('Length of Hydrophobic segments with 1 OEGMA: ' + str(seg_array))"
    ]
   },
   {
@@ -359,7 +358,7 @@
    "outputs": [],
    "source": [
     "#sample = [1, 2, 3, 4, 1, 1, 2, 1, 3, 1, 3, 1, 3, 2, 3, 3, 4, 4, 2, 1, 2, 4, None, None, None]\n",
-    "sample = [1, 3, 1, 3, 1, 3, 2, 1, 1, 1, 3]"
+    "sample = [1, 1, 1, 3, 4, 4, 4, 4, 1, 1, 2, 3, 1, 3, 2, 1, 1, 4, 2, 4, 1, 1, 2, 1, 3, None, None]"
    ]
   },
   {
@@ -371,48 +370,25 @@
     "#specific segment pattern search mon2mon level (still working on it)\n",
     "oegma_counter = 0\n",
     "seg_len = 0\n",
-    "seg_array = list()\n",
+    "seg_array = []\n",
     "pos_array = list()\n",
     "\n",
     "for i in range(len(sample)):\n",
     "    if sample[i] == 2:\n",
     "        back_counter = 0\n",
     "        forward_counter = 0\n",
-    "        for j in range(len(sample)):\n",
-    "            while (sample[i-j] != 1 or sample[i-j] != 3) and i-j >= 0:\n",
-    "                back_counter += 0\n",
-    "            if back_counter < 2:\n",
-    "                continue\n",
-    "            while (sample[i+j] != 1 or sample[i+j] != 3) and i+j <= len(sample):\n",
-    "                forward_counter += 0\n",
-    "            if forward_counter < 2:\n",
-    "                continue\n",
-    "            x = back_counter + forward_counter + 1\n",
-    "            seg_array.append(x)\n",
-    "            \n",
-    "#     if sample[i] == None:\n",
-    "#         continue\n",
-    "#     elif int(sample[i]) == 1 or int(sample[i]) == 3:\n",
-    "#         seg_len += 1\n",
-    "#     elif int(sample[i]) == 2 and oegma == 0:\n",
-    "#         oegma += 1\n",
-    "#         seg_len += 1\n",
-    "#     elif int(sample[i]) == 2 and oegma == 1:\n",
-    "#         seg_array.append(seg_len)\n",
-    "#         pos_array.append(i)\n",
-    "#         seg_len = 0\n",
-    "#         oegma = 0\n",
-    "#     elif int(sample[i]) == 4 and oegma == 0:\n",
-    "#         seg_len = 0\n",
-    "#     elif int(sample[i]) == 4 and oegma == 1:\n",
-    "#         seg_array.append(seg_len)\n",
-    "#         pos_array.append(i)\n",
-    "#         seg_len = 0\n",
-    "#         oegma = 0\n",
+    "        j = 1\n",
+    "        k = 1\n",
+    "        while (sample[i-j] == 1 or sample[i-j] == 3) and i-j >= 0:\n",
+    "            j += 1\n",
+    "            back_counter += 1\n",
+    "        while i+k <= len(sample)-1 and (sample[i+k] == 1 or sample[i+k] == 3):\n",
+    "            k += 1\n",
+    "            forward_counter += 1\n",
+    "        if forward_counter > 1 and back_counter > 1:\n",
+    "            seg_array.append(back_counter + forward_counter + 1)\n",
     "\n",
-    "# print('Number of Hydrophobic segments with 1 OEGMA: ' + str(len(seg_array)))\n",
-    "# print('Length of Hydrophobic segments with 1 OEGMA: ' + str(seg_array))\n",
-    "# print(pos_array)"
+    "print(seg_array)"
    ]
   },
   {
@@ -527,6 +503,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Seq2Seq Inputs: ENTER HERE\n",
+    "window_len = 10 #specifies which window length HLB data to be analyzed (must be in outputs file)\n",
+    "batch_no = 9 #specifies batch number to be analyzed"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -620,7 +607,6 @@
    "outputs": [],
    "source": [
     "#get HLB files of a particular window length\n",
-    "window_len = 10\n",
     "path = \"outputs\"\n",
     "hlb_csv_files = []\n",
     "for file in os.listdir(path):\n",
@@ -637,9 +623,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert batch number to analyze here here\n",
-    "batch_no = 9\n",
-    "\n",
     "# read sliding window analysis csv files and convert to pd dataframes\n",
     "dfs_hlb = []\n",
     "seq_lens_hlb = []\n",
@@ -911,7 +894,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#ADD SPECIFIC SEGMENT SEARCH HERE"
+    "### Specific segment pattern search (seq2seq level)\n",
+    "b_no = batch_no\n",
+    "\n",
+    "oegma_counter = 0\n",
+    "seg_len_list = []\n",
+    "seg_array_b = list()\n",
+    "seg_arr = []\n",
+    "allseg_array = []\n",
+    "\n",
+    "for s_no in range(len(dfs[b_no])):\n",
+    "    seg_arr = []\n",
+    "    for i in range(len(dfs[b_no].iloc[s_no])):\n",
+    "        if dfs[b_no][i][s_no] == str(2):\n",
+    "            back_counter = 0\n",
+    "            forward_counter = 0\n",
+    "            j = 1\n",
+    "            k = 1\n",
+    "            while i-j >= 0 and (dfs[b_no][i-j][s_no] == str(1) or dfs[b_no][i-j][s_no] == str(3)):\n",
+    "                j += 1\n",
+    "                back_counter += 1\n",
+    "            while i+k <= len(dfs[b_no].iloc[s_no])-1 and (dfs[b_no][i+k][s_no] == str(1) or dfs[b_no][i+k][s_no] == str(3)):\n",
+    "                k += 1\n",
+    "                forward_counter += 1\n",
+    "            if forward_counter > 1 and back_counter > 1:\n",
+    "                seg_arr.append(back_counter + forward_counter + 1)\n",
+    "                allseg_array.append(back_counter + forward_counter + 1)\n",
+    "    seg_len_list.append(len(seg_arr))\n",
+    "    seg_array_b.append(seg_arr)\n",
+    "\n",
+    "#seg_array_b --> list of lengths of Hydrophobic segments with 1 OEGMA per sequence in specified batch\n",
+    "#seg_len_list --> array of number of Hydrophobic segments with 1 OEGMA per sequence in specified batch\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#analyzes specific segment search data\n",
+    "Avg_NumSeg = np.mean(np.array(seg_len_list))\n",
+    "StDev_NumSeg = np.std(np.array(seg_len_list))\n",
+    "Avg_LenSeg = []\n",
+    "StDev_LenSeg = []\n",
+    "\n",
+    "for i in range(len(seg_array_b)):\n",
+    "    avg = np.mean(np.array(seg_array_b[i]))\n",
+    "    sdev = np.std(np.array(seg_array_b[i]))\n",
+    "    Avg_LenSeg.append(avg)\n",
+    "    StDev_LenSeg.append(sdev)\n",
+    "\n",
+    "print(\"Average Number of Hydrophobic segments with 1 Oegma per sequence in batch: \" + str(Avg_NumSeg))\n",
+    "print(\"StDev of Number of Hydrophobic segments with 1 Oegma per sequence in batch: \" + str(StDev_NumSeg))\n",
+    "#Uncomment following lines for length data per sequence\n",
+    "#print(\"Average lengths of Hydrophobic segments with 1 OEGMA per sequence in batch: \" + str(Avg_LenSeg))\n",
+    "#print(\"StDev of lengths of Hydrophobic segments with 1 Oegma per sequence in batch: \" + str(StDev_LenSeg))\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "plt.xlabel(\"segment length\")\n",
+    "plt.ylabel(\"# of segments\")\n",
+    "plt.title(\"Hydrophobic Segments with 1 OEGMA\")\n",
+    "plt.hist(allseg_array, bins=32)"
    ]
   },
   {
